[package]
name = "mdparse"
version = "0.1.0"
edition = "2021"
authors = ["Jamie Quigley <jamie@quigley.xyz>"]
license = "MPL-2.0"
description = "A (fast) rust library to parse Discord's flavour of markdown"
repository = "https://github.com/Sciencentistguy/mdparse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
